--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "language-eiffel",
+  "name": "language-eiffel-modern",
   "version": "0.0.0",
   "description": "Syntax highlighter for Eiffel language",
   "keywords": [
