--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "language-eiffel-modern",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Syntax highlighter for Eiffel language",
-  "keywords": [
-  ],
+  "keywords": [],
   "repository": "https://github.com/GermanGT/language-eiffel",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
